--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.14.1",
     "react-spring": "^9.7.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
