--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mui/material": "^5.16.7",
     "@tanstack/react-query": "^5.52.0",
     "axios": "^1.7.4",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
